--- a/MathObjects.UI/MathObjects.UI.csproj
+++ b/MathObjects.UI/MathObjects.UI.csproj
@@ -62,6 +62,9 @@
     <EmbeddedResource Include="gtk-gui\gui.stetic">
       <LogicalName>gui.stetic</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="calc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
@@ -149,10 +152,5 @@
     <Content Include="calculator.desktop">
       <DeployService-TargetDirectoryId>Linux.DesktopApplications</DeployService-TargetDirectoryId>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Tetrahedron-3-3D-balls.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 </Project>
