--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -84,6 +84,9 @@
     <Compile Include="Func\RandomOperation.cs" />
     <Compile Include="Func\StackParamObject.cs" />
     <Compile Include="Func\StackParamOperation.cs" />
+    <Compile Include="Parser\EvalVisitor1.cs" />
+    <Compile Include="EvalProcessor1.cs" />
+    <Compile Include="Parser\EvalVisitor1Save.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
