--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Parser\GenericDefaultProcessor.cs" />
     <Compile Include="Parser\GenericDefaultPreprocessor.cs" />
     <Compile Include="Parser\Processor.cs" />
+    <Compile Include="UndefinedValue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
